--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* COMMON */
 body {
   color: #333;
   font-size: 16px;
@@ -10,14 +11,67 @@ body {
 a {
   text-decoration: none;
 }
+
 img {
   display: block;
 }
-.inner{
+
+.inner {
   width: 1100px;
   margin: 0 auto;
   position: relative;
 }
+
+.btn {
+  width: 130px;
+  padding: 10PX;
+  BORDER: 2PX SOLID #333;
+  border-radius: 4px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align: center;
+  display: block;
+  transition: .4s;
+}
+.btn:hover{
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--reverse{
+  background-color: #333;
+  color: #fff;
+}
+.btn.btn--reverse:hover{
+  background-color: transparent;
+  color: #333;
+}
+.btn.btn--brown{
+  color: #592B18;
+  border-color: #592B18;
+}
+.btn.btn--brown:hover{
+  color: #fff;
+  background-color: #592B18;
+}
+.btn.btn--gold{
+  color: #d9aa8a;
+  background-color: #d9aa8a;
+}
+.btn.btn--gold:hover{
+  color: #fff;
+  background-color: #d9aa8a;
+}
+.btn.btn--white{
+  color: #fff;
+  background-color: #fff;
+}
+.btn.btn--white:hover{
+  color: #333;
+  background-color: #fff;
+}
+
+
 
 /* HEADER */
 header {
@@ -26,9 +80,10 @@ header {
   border-bottom: 1px solid #c8c8c8;
   position: fixed;
   top: 0;
+  z-index: 9;
 }
 
-header > .inner {
+header>.inner {
   height: 120px;
 }
 
@@ -115,86 +170,155 @@ header .sub-menu .material-icons {
   bottom: 0;
   right: 5px;
   margin: auto;
-  transition:  .4s;
+  transition: .4s;
 }
-header .sub-menu .search.focused .material-icons{
-  opacity:0;
+
+header .sub-menu .search.focused .material-icons {
+  opacity: 0;
 }
-header .main-menu{
+
+header .main-menu {
   position: absolute;
   bottom: 0;
   right: 0;
   z-index: 1;
-  display:flex;
+  display: flex;
 }
-header .main-menu .item{
-  
-}
-header .main-menu .item .item__name{
+
+header .main-menu .item {}
+
+header .main-menu .item .item__name {
   padding: 10px 20px 34px 20px;
   font-family: Arial, sans-serif;
   font-size: 13px;
 }
-header .main-menu .item:hover .item__name{
+
+header .main-menu .item:hover .item__name {
   background-color: #2c2a29;
   color: #669900;
   border-radius: 6px 6px 0 0;
 }
-header .main-menu .item .item__contents{
+
+header .main-menu .item .item__contents {
   width: 100%;
-  position:fixed;
+  position: fixed;
   left: 0;
   display: none;
 }
-header .main-menu .item:hover .item__contents{
+
+header .main-menu .item:hover .item__contents {
   display: block;
 }
-header .main-menu .item .item__contents .contents__menu{
+
+header .main-menu .item .item__contents .contents__menu {
   background-color: #2c2a29;
 }
-header .main-menu .item .item__contents .contents__menu > ul{
+
+header .main-menu .item .item__contents .contents__menu>ul {
   display: flex;
   padding: 20px 0;
 }
-header .main-menu .item .item__contents .contents__menu > ul > li{
+
+header .main-menu .item .item__contents .contents__menu>ul>li {
   width: 220px;
 }
-header .main-menu .item .item__contents .contents__menu > ul > li h4{
+
+header .main-menu .item .item__contents .contents__menu>ul>li h4 {
   padding: 3px 0 12px 0;
   font-size: 14px;
   color: #fff;
 }
-header .main-menu .item .item__contents .contents__menu > ul > li ul li{
+
+header .main-menu .item .item__contents .contents__menu>ul>li ul li {
   padding: 5px 0;
   font-size: 12px;
   color: #999;
   cursor: pointer;
 }
-header .main-menu .item .item__contents .contents__menu > ul > li ul li:hover{
-  color:#669900
+
+header .main-menu .item .item__contents .contents__menu>ul>li ul li:hover {
+  color: #669900
 }
-header .main-menu .item .item__contents .contents__texture{
+
+header .main-menu .item .item__contents .contents__texture {
   padding: 24px 0;
   font-size: 12px;
   background-image: url("../images/main_menu_pattern.jpg");
 }
-header .main-menu .item .item__contents .contents__texture h4{
+
+header .main-menu .item .item__contents .contents__texture h4 {
   color: #999;
   font-weight: 700;
 }
-header .main-menu .item .item__contents .contents__texture p{
+
+header .main-menu .item .item__contents .contents__texture p {
   color: #669900;
   margin: 4px 0 14px;
 }
-header .badges{
+
+header .badges {
   position: absolute;
   top: 132px;
   right: 12px;
 }
-header .badges .badge{
+
+header .badges .badge {
   border-radius: 10px;
   overflow: hidden;
   margin-bottom: 12px;
-  box-shadow: 4px 4px 10px rgba(0,0,0,.15);
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, .15);
   cursor: pointer;
+}
+
+/* VISUAL */
+.visual {
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg");
+  background-position: center;
+}
+
+.visual .inner {
+  height: 646px;
+}
+
+.visual .title {
+  position: absolute;
+  top: 88px;
+  left: -10px;
+}
+
+.visual .title .btn {
+  position: absolute;
+  top: 259px;
+  left: 173px;
+}
+
+.visual .cup1.image {
+  position: absolute;
+  bottom: 0;
+  right: -47px;
+}
+
+.visual .cup1.text {
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+
+.visual .cup2.image {
+  position: absolute;
+  bottom: 0;
+  right: 171px;
+}
+
+.visual .cup2.text {
+  position: absolute;
+  top: 321px;
+  right: 171px;
+}
+
+.visual .spoon {
+  position: absolute;
+  bottom: 0;
+  left: 275px
 }
