notice and toggle-promotion

--- a/css/main.css
+++ b/css/main.css
@@ -34,39 +34,48 @@ img {
   display: block;
   transition: .4s;
 }
-.btn:hover{
+
+.btn:hover {
   background-color: #333;
   color: #fff;
 }
-.btn.btn--reverse{
+
+.btn.btn--reverse {
   background-color: #333;
   color: #fff;
 }
-.btn.btn--reverse:hover{
+
+.btn.btn--reverse:hover {
   background-color: transparent;
   color: #333;
 }
-.btn.btn--brown{
+
+.btn.btn--brown {
   color: #592B18;
   border-color: #592B18;
 }
-.btn.btn--brown:hover{
+
+.btn.btn--brown:hover {
   color: #fff;
   background-color: #592B18;
 }
-.btn.btn--gold{
+
+.btn.btn--gold {
   color: #d9aa8a;
   background-color: #d9aa8a;
 }
-.btn.btn--gold:hover{
+
+.btn.btn--gold:hover {
   color: #fff;
   background-color: #d9aa8a;
 }
-.btn.btn--white{
+
+.btn.btn--white {
   color: #fff;
   background-color: #fff;
 }
-.btn.btn--white:hover{
+
+.btn.btn--white:hover {
   color: #333;
   background-color: #fff;
 }
@@ -323,6 +332,85 @@ header .badges .badge {
   left: 275px
 }
 
-.visual .fade-in{
-  opacity:0;
+.visual .fade-in {
+  opacity: 0;
+}
+
+/* NOTICE */
+.notice {}
+
+.notice .notice-line {
+  position: relative;
+}
+
+.notice .notice-line .bg-left {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #333;
+}
+
+.notice .notice-line .bg-right {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #f6f5ef;
+}
+
+.notice .notice-line .inner {
+  height: 62px;
+  border: 2px solid red;
+  display: flex;
+}
+.notice .notice-line .inner__left {
+  width: 60%;
+  height: 100%;
+  background-color: #333;
+  display: flex;
+  align-items: center;
+}
+.notice .notice-line .inner__left h2{
+  color: #fff;
+  font-size: 17px;
+  font-weight: 700;
+  margin-right: 20px;
+}
+.notice .notice-line .inner__left .swiper-container{
+  height: 62px;
+  background-color: orange;
+  flex-grow: 1;
+}
+.notice .notice-line .inner__left .notice-line__more{
+  width: 62px;
+  height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notice .notice-line .inner__left .notice-line__more .material-icons{
+  color: #fff;
+  font-size: 30px;
+}
+.notice .notice-line .inner__right {
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+.notice .notice-line .inner__right h2{
+}
+.notice .notice-line .inner__right .toggle-promotion{
+  width: 62px;
+  height: 62px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.notice .notice-line .inner__right .toggle-promotion .material-icons{
 }
