--- a/css/main.css
+++ b/css/main.css
@@ -381,8 +381,15 @@ header .badges .badge {
 }
 .notice .notice-line .inner__left .swiper-container{
   height: 62px;
-  background-color: orange;
   flex-grow: 1;
+}
+.notice .notice-line .inner__left .swiper-slide{
+  height: 62;
+  display: flex;
+  align-items: center;
+}
+.notice .notice-line .inner__left .swiper-slide a{
+  color: #fff;
 }
 .notice .notice-line .inner__left .notice-line__more{
   width: 62px;
