--- a/css/main.css
+++ b/css/main.css
@@ -365,6 +365,7 @@ header .badges .badge {
   height: 62px;
   display: flex;
 }
+
 .notice .notice-line .inner__left {
   width: 60%;
   height: 100%;
@@ -372,35 +373,42 @@ header .badges .badge {
   display: flex;
   align-items: center;
 }
-.notice .notice-line .inner__left h2{
+
+.notice .notice-line .inner__left h2 {
   color: #fff;
   font-size: 17px;
   font-weight: 700;
   margin-right: 20px;
 }
-.notice .notice-line .inner__left .swiper-container{
+
+.notice .notice-line .inner__left .swiper-container {
   height: 62px;
   flex-grow: 1;
 }
-.notice .notice-line .inner__left .swiper-slide{
+
+.notice .notice-line .inner__left .swiper-slide {
   height: 62;
   display: flex;
   align-items: center;
 }
-.notice .notice-line .inner__left .swiper-slide a{
+
+.notice .notice-line .inner__left .swiper-slide a {
   color: #fff;
 }
-.notice .notice-line .inner__left .notice-line__more{
+
+.notice .notice-line .inner__left .notice-line__more {
   width: 62px;
   height: 62px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.notice .notice-line .inner__left .notice-line__more .material-icons{
+
+.notice .notice-line .inner__left .notice-line__more .material-icons {
   color: #fff;
   font-size: 30px;
 }
+
 .notice .notice-line .inner__right {
   width: 40%;
   height: 100%;
@@ -408,9 +416,10 @@ header .badges .badge {
   justify-content: flex-end;
   align-items: center;
 }
-.notice .notice-line .inner__right h2{
-}
-.notice .notice-line .inner__right .toggle-promotion{
+
+.notice .notice-line .inner__right h2 {}
+
+.notice .notice-line .inner__right .toggle-promotion {
   width: 62px;
   height: 62px;
   cursor: pointer;
@@ -418,20 +427,24 @@ header .badges .badge {
   justify-content: center;
   align-items: center;
 }
-.notice .notice-line .inner__right .toggle-promotion .material-icons{
+
+.notice .notice-line .inner__right .toggle-promotion .material-icons {
   font-size: 30px;
 }
-.notice .promotion{  
+
+.notice .promotion {
   height: 693px;
   background-color: #f6f5ef;
   position: relative;
   transition: height .4s;
   overflow: hidden;
 }
-.notice .promotion.hide{
+
+.notice .promotion.hide {
   height: 0;
 }
-.notice .promotion .swiper-container{
+
+.notice .promotion .swiper-container {
   width: calc(819px * 3 + 20px);
   /* width: calc(100% - 50px); */
   height: 553px;
@@ -440,27 +453,31 @@ header .badges .badge {
   left: 50%;
   margin-left: calc((819px*3 +20px)/-2);
 }
-.notice .promotion .swiper-slide{
+
+.notice .promotion .swiper-slide {
   opacity: .5;
   transition: opacity 1s;
 }
-.notice .promotion .swiper-slide-active{
+
+.notice .promotion .swiper-slide-active {
   opacity: 1;
 }
-.notice .promotion .swiper-slide .btn{
-  position:absolute;
+
+.notice .promotion .swiper-slide .btn {
+  position: absolute;
   bottom: 0;
-  left:0;
+  left: 0;
   right: 0;
   margin: auto;
 }
 
-.notice .promotion .swiper-pagination{
-  bottom:40px;
+.notice .promotion .swiper-pagination {
+  bottom: 40px;
   left: 0;
   right: 0;
 }
-.notice .promotion .swiper-pagination .swiper-pagination-bullet{
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet {
   background-color: transparent;
   background-image: url("../images/promotion_slide_pager.png");
   width: 12px;
@@ -468,19 +485,23 @@ header .badges .badge {
   margin-right: 6px;
   outline: none;
 }
-.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child{
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child {
   margin-right: 0;
 }
-.notice .promotion .swiper-pagination .swiper-pagination-bullet-active{
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet-active {
   background-image: url("../images/promotion_slide_pager_on.png");
 }
-  .notice .promotion .swiper-prev,
-  .notice .promotion .swiper-next{
-  width: 42px;;
+
+.notice .promotion .swiper-prev,
+.notice .promotion .swiper-next {
+  width: 42px;
+  ;
   height: 42px;
   border: 2px solid #333;
   border-radius: 50%;
-  position: absolute;  
+  position: absolute;
   top: 300px;
   z-index: 1;
   cursor: pointer;
@@ -490,17 +511,62 @@ header .badges .badge {
   align-items: center;
   transition: .4s;
 }
-.notice .promotion .swiper-prev{
+
+.notice .promotion .swiper-prev {
   left: 50%;
   margin-left: -480px;
 }
-.notice .promotion .swiper-next{
+
+.notice .promotion .swiper-next {
   right: 50%;
   margin-right: -480px;
 }
+
 .notice .promotion .swiper-prev:hover,
-.notice .promotion .swiper-next:hover{
+.notice .promotion .swiper-next:hover {
   background-color: #333;
   color: #fff;
 }
-  
+
+/* REWARDS */
+.rewards {
+  position: relative;
+}
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.rewards .inner {
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+.rewards .btn-group {
+  position: absolute;
+  right: 0;
+  bottom: 24px;
+  width: 300px;
+  display: flex;
+  flex-wrap: wrap;
+}
+.rewards .btn-group .btn.sign-up {
+  margin-right: 10px;
+}
+.rewards .btn-group .btn.sign-in {
+  width: 110px;
+}
+.rewards .btn-group .btn.gift {
+  margin-top: 10px;
+  flex-grow: 1;
+}
