--- a/css/main.css
+++ b/css/main.css
@@ -62,7 +62,8 @@ img {
 
 .btn.btn--gold {
   color: #d9aa8a;
-  background-color: #d9aa8a;
+  border-radius: 8px;
+  border-color: #d9aa8a;
 }
 
 .btn.btn--gold:hover {
@@ -72,7 +73,8 @@ img {
 
 .btn.btn--white {
   color: #fff;
-  background-color: #fff;
+  border-radius: 8px;
+  border-color: #fff;
 }
 
 .btn.btn--white:hover {
@@ -623,8 +625,78 @@ header .badges .badge {
   top: 350px;
   left: 100px;
 }
-.youtube .floating3{
+
+
+/* SEASON PRODUCT */
+.season-product{
+  background-image: url("../images/season_product_bg.jpg");
+}
+.season-product .inner{
+  height: 400px;
+}
+.season-product .floating3{
   position: absolute;
-  bottom: -200px;
+  top: -200px;
   right: 0;
+}
+.season-product .text-group{
+  position: absolute;
+  top: 110px;;
+  right: 100px;
+}
+.season-product .text-group .title{
+  margin-bottom: 10px;
+}
+.season-product .text-group .description{
+  margin-bottom: 15px;
+}
+.season-product .text-group .more{
+}
+
+/* RESERVE COFFEE */
+.reserve-coffee{
+  background-image: url("../images/reserve_bg.jpg");
+}
+.reserve-coffee .inner{
+  height: 400px;
+}
+.reserve-coffee .reserve-logo{
+  position: absolute;
+  top: 110px;
+  left: 0;
+}
+.reserve-coffee .text-group{
+  position: absolute;
+  top: 124px;
+  left: 208px;
+}
+.reserve-coffee .product{
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* PICK YOUR FAVORITE */
+.pick-your-favorite{
+  background-image: url("../images/favorite_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.pick-your-favorite .inner{
+  padding: 110px 0;
+}
+.pick-your-favorite .text-group{
+  margin-left: 100px;
+  width: 362px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+.pick-your-favorite .text-group .title{
+  margin-bottom: 40px;
+}
+.pick-your-favorite .text-group .description{
+  margin-bottom: 40px;
 }
