--- a/css/main.css
+++ b/css/main.css
@@ -700,3 +700,15 @@ header .badges .badge {
 .pick-your-favorite .text-group .description{
   margin-bottom: 40px;
 }
+
+/* RESERVE STORE */
+.reserve-store{
+  background-image: url("../images/reserve_store_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+.reserve-store .inner{
+  height: 600px;
+}
